--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
+    "ityped": "^1.0.3",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-ityped": "^1.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-simple-typewriter": "^3.0.1",
+    "react-tsparticles": "^1.37.5",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
